@@ -8,6 +8,9 @@ SASL.  That include the manual, the command line tool, and self tests.
 
 * Version 0.2.28 (unreleased)
 
+** gsasl: Rewrite to use poll instead of select.
+Will allow easier porting to Mingw32 in the future.
+
 * Version 0.2.27 (released 2008-07-01)
 
 ** Fix SASL operations through TLS.
